syntax = "proto3";

option java_package = "protocols";
option java_outer_classname = "Common";

enum MessageID {
    GET_BEST_MOVE = 0;
    MOVE_PIECE = 1;
    GET_VALID_MOVES = 2;

    FIND_BEST = 3;

    VALID_MOVES_RESPONSE = 4;
    FIND_BEST_RESPONSE = 5;
}